# simple-graph-tool

./: .qmake.stash  CMakeLists.txt  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  SimpleGraphTool  SimpleGraphTool.pro  SimpleGraphTool_resource.rc  arcgraphicsitem.cpp  arcgraphicsitem.h  graph.cpp  graph.h  graphgraphicsscene.cpp  graphgraphicsscene.h  graphgraphicsview.cpp  graphgraphicsview.h  graphmatrixtable.cpp  graphmatrixtable.h  graphutils.cpp  graphutils.h  icon_windows.syso  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_graphgraphicsscene.cpp  moc_graphmatrixtable.cpp  moc_mainwindow.cpp  node.cpp  node.h  nodegraphicsitem.cpp  nodegraphicsitem.h  qdebugstream.h  resource.qrc  ui_mainwindow.h
basis/headers/: DirectedGraph.h  Edge.h  Graph.h  GraphUtils.h  Matrix.h  Node.h  UndirectedGraph.h
basis/sources/: DirectedGraph.cpp  Graph.cpp  GraphUtils.cpp  Node.cpp  UndirectedGraph.cpp
graphics/headers/: EdgeGraphicsItem.h  GraphGraphicsScene.h  GraphGraphicsView.h  NodeGraphicsItem.h
graphics/sources/: EdgeGraphicsItem.cpp  GraphGraphicsScene.cpp  GraphGraphicsView.cpp  NodeGraphicsItem.cpp
headers/: Arc.h  ArcGraphicsItem.h  ElementPropertiesTable.h  ElementTableWidget.h  Graph.h  GraphGraphicsScene.h  GraphGraphicsView.h  GraphMatrixTable.h  GraphPropertiesTable.h  GraphUtils.h  InputDialog.h  Matrix.h  Node.h  NodeGraphicsItem.h  qdebugstream.h  random.h
release/: moc_graphgraphicsscene.cpp  moc_graphgraphicsview.cpp  moc_graphmatrixtable.cpp  moc_inputdialog.cpp  moc_mainwindow.cpp
sources/: ArcGraphicsItem.cpp  ElementPropertiesTable.cpp  ElementTableWidget.cpp  Graph.cpp  GraphGraphicsScene.cpp  GraphGraphicsView.cpp  GraphMatrixTable.cpp  GraphPropertiesTable.cpp  GraphUtils.cpp  InputDialog.cpp  Node.cpp  NodeGraphicsItem.cpp  UndirectedGraph.cpp
utils/: qdebugstream.h  random.h
widgets/headers/: AdjacencyMatrixTable.h  ElementPropertiesTable.h  GraphMatrixTable.h  GraphOptionDialog.h  GraphPropertiesTable.h  IncidenceMatrixTable.h  InputDialog.h  MultiComboboxDialog.h  MultiLineInputDialog.h  OptionDialog.h
widgets/sources/: AdjacencyMatrixTable.cpp  ElementPropertiesTable.cpp  GraphMatrixTable.cpp  GraphOptionDialog.cpp  GraphPropertiesTable.cpp  IncidenceMatrixTable.cpp  InputDialog.cpp  MultiComboboxDialog.cpp  MultiLineInputDialog.cpp  OptionDialog.cpp
